--- a/ResortAppication/Views/Account/Forgot.cshtml
+++ b/ResortAppication/Views/Account/Forgot.cshtml
@@ -1,4 +1,4 @@
-﻿@model LoginVM
+﻿@model ForgotVM
 
 <div class="container pt-5">
     <div class="card shadow border">
@@ -14,37 +14,28 @@
                 <div class="col-md-12">
                     <section>
                         <form method="post">
-                            <input asp-for ="RedirectUrl" hidden/>
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="form-floating mb-3">
-                                <input class="form-control" asp-for ="Email" aria-required="true" />
+                                <input class="form-control" asp-for="Email" aria-required="true" />
                                 <label class="form-label" asp-for="Email">Email</label>
                                 <span asp-validation-for="Email" class="text-danger"></span>
                             </div>
                             <div class="form-floating mb-3">
-                                <input class="form-control" asp-for = "Password"aria-required="true" />
-                                <label class="form-label"asp-for="Password">Password</label>
+                                <input class="form-control" asp-for="Password" aria-required="true" />
+                                <label class="form-label" asp-for="Password">Password</label>
                                 <span asp-validation-for="Password" class="text-danger"></span>
 
                             </div>
-                            <div class="checkbox mb-3">
-                                <input class="form-check-input" asp-for = "RememberMe"/>
+                            <div class="form-floating mb-3">
+                                <input class="form-control" asp-for="ConfirmPassword" aria-required="true" />
+                                <label class="form-label" asp-for="ConfirmPassword">ConfirmPassword</label>
+                                <span asp-validation-for="Password" class="text-danger"></span>
 
-                                <label class="form-label" asp-for="RememberMe">
-                                    Remember Me
-                                </label>
                             </div>
                             <div>
-                                <button type="submit" class="w-100 btn btn-lg btn-outline-success">Log in</button>
+                                <button type="submit" class="w-100 btn btn-lg btn-outline-success">Change Password</button>
                             </div>
-                            <div class="d-flex justify-content-between pt-2">
-                                <p>
-                                    <a asp-controller ="Account" asp-action ="Forgot">Forgot your password?</a>
-                                </p>
-                                <p>
-                                    <a  asp-action ="Register" asp-route-returnurl = "@Model.RedirectUrl">Register as a new user</a>
-                                </p>
-                            </div>
+                            
                         </form>
                     </section>
                 </div>
